# cert-tools

./: .gitignore  .pre-commit-config.yaml  .ruby-version  Gemfile  README.md  pyproject.toml  regenerate-cert.rb
src/: check_cert_bundle.py  explode_certs.py
