[project]
name = "cert-tools"
version = "0.1.0"
description = "Miscellaneous tools for working with certificates"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "cryptography==45.0.2",
    "rich-click>=1.8.9",
]

[project.scripts]
check-cert-bundle = "check_cert_bundle:main"

[tool.uv]
package = true
